# address_verification_registry_proof

host/: Cargo.toml
host/src/: main.rs
methods/guest/: Cargo.toml
methods/guest/src/: main.rs
